--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vector tile builder Demo</title>
+    <title>関東 VectorTileMap</title>
     <script src="https://unpkg.com/maplibre-gl@1.15.2/dist/maplibre-gl.js"></script>
     <link
       href="https://unpkg.com/maplibre-gl@1.15.2/dist/maplibre-gl.css"
